tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/virtualservice/set_authority_header/tproxy/to_b/_test_context/VirtualService.731471762.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-88348
spec:
  hosts:
  - b
  http:
  - headers:
      request:
        set:
          :authority: my-custom-authority
    route:
    - destination:
        host: b
